project name and icons logo

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Baytrh</title>
+    <title>Bytrh</title>
    
   </head>
   <body>
