add content project

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This web site is an admin dashboard for a mobile app that allows the admin to manage all data and permissions. The mobile app is a veterinary clinic and pet store that sells pets and pet supplies."
+
       />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
