--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This web site is an admin dashboard for a mobile app that allows the admin to manage all data and permissions. The mobile app is a veterinary clinic and pet store that sells pets and pet supplies."
+      content="This web site is an admin dashboard for a mobile app that allows
+      the admin to manage all data and permissions. The mobile app is a
+      veterinary clinic and pet store that sells pets and pet supplies."
 
       />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Bytrh</title>
-   
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -29,5 +31,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOQ1qVIyrLaSM819j3CxVv8OYLgJiYg4"
+      async
+      defer></script>
   </body>
 </html>
